# kubeline-yolo-mlops

./: .gitignore  CLAUDE.md  README.md  kubeline.yaml  orchestrate.sh  pipeline_config.example.yaml  pipeline_config.toy.yaml
.claude/agents/: model-registration-agent.md  pipeline-config-validator.md  yolo-dataset-loader.md  yolo-mlflow-trainer.md
.github/workflows/: ci-build.yml  dag-update.yml
config_validation/: CLAUDE.md  Dockerfile  README.md  env.example  pyproject.toml
config_validation/.claude/agent-memory/pipeline-config-validator/: MEMORY.md
config_validation/app/: cli.py  logger.py  manager.py
config_validation/app/models/: config.py  pipeline_config.py
config_validation/app/services/: config_validation.py
config_validation/tests/: test_config.py  test_config_validation_service.py  test_manager.py  test_pipeline_config.py
dataset_loading/: CLAUDE.md  Dockerfile  README.md  env.example  pyproject.toml
dataset_loading/app/: cli.py  manager.py
dataset_loading/tests/: test_config.py  test_dataset_loading_service.py  test_manager.py
docs/: mlops_technical_architecture.md
model_registration/: Dockerfile  README.md  env.example  pyproject.toml
model_registration/app/: cli.py  manager.py
model_registration/tests/: test_config.py  test_manager.py  test_model_registration_service.py
model_training/: Dockerfile  README.md  env.example  mlflow.db  pyproject.toml
model_training/app/: cli.py  logger.py  manager.py
model_training/tests/: test_config.py  test_lru_disk_cache.py  test_manager.py  test_model_training_service.py  test_s3_dataset.py  (+2 more)
(+22 files in other folders)
